# rca-mcp

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  index.html  main.tsx  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml
deployment/opik/: docker-compose.patch
frontend/: RcaComponent.jsx  RcaComponent.tsx  index.ts
rcav2/: __init__.py  __main__.py  api.py  auth.py  config.py  database.py  dspy_agent.py  env.py  errors.py  git.py  logjuicer.py  model.py  opik_trace.py  prompt.py  standalone.py  worker.py  workflows.py  zuul.py  zuul_info.py
rcav2/agent/: ansible.py  jira_agent.py  logjuicer_agent.py  predict.py  rca.py  rca_reader.py  react.py  zuul.py
rcav2/models/: errors.py  report.py  zuul_info.py
rcav2/static/: client.js  index.html
rcav2/tools/: git.py  jira_client.py  logjuicer.py  slack.py  zuul.py
tests/: test_database.py  test_worker.py
