[project]
name = "rcav2"
version = "0.1.0"
license = "Apache-2.0"
description = "MCP Tool used to identify, understand and deliver fast and accurate root cause analysis of Zuul CI Build failures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "fastapi[standard]",
    "httpx>=0.28.1",
    "httpx-gssapi>=0.4",
    "httpx-ws>=0.7.2",
    "sqlalchemy>=2.0.43",
    "pyyaml>=6.0.2",
    "dspy>=3.0.4b1",
    "opik>=0.1.0",
    "jira>=3.10.5",
    "slack-sdk>=3.37.0",
    "propcache>=0.4.1"
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pytest>=8.4.1",
    "ruff>=0.11.12",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rcav2 = "rcav2.__main__:main"

[project.urls]
Homepage = "https://github.com/RCAccelerator/rca-api"
Repository = "https://github.com/RCAccelerator/rca-api"
